--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,7 +30,8 @@ dependencies {
     // compile 'com.github.dsibenik:WaveformSeekBar:0.1@aar'
 
 
-    androidTestCompile files('libs/espresso.jar')
+    //androidTestCompile files('libs/espresso.jar')
+    androidTestCompile 'com.jayway.android.robotium:robotium-solo:4.3.1'
 
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.android.support:support-v4:13.0.0'
@@ -54,6 +55,22 @@ android {
         release {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
+    }
+    productFlavors {
+        // Standalone AndroidTestCase tests
+        // Do not require Gasp! server integration
+        base {
+        }
+
+        // Integration tests (AndroidTestCase, InstrumentationTestCase, ServiceTestCase)
+        // Requires Gasp! server
+        integration {
+
+        }
+        // ActivityInstrumentationTestCase2 and Robotium tests
+        // Requires Gasp! server
+        full {
         }
     }
 }
