--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile files('src/main/java/lib/espresso.jar')
 
-    // compile 'com.github.dsibenik:WaveformSeekBar:0.1@aar'
+    // compile 'com.github.dsibenik:WaveformSeekBar:0.+@aar'
 
 
     //androidTestCompile files('libs/espresso.jar')
